force-app/main/default/objects/Booking__c/fields/Check_Out_time__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_time__c</fullName>
    <label>Check Out time</label>
    <type>DateTime</type>
</CustomField>