force-app/main/default/objects/Booking__c/fields/Hotel_Customer__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Customer__c</fullName>
    <label>Hotel Customer</label>
    <referenceTo>Hotal_Customer__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>