force-app/main/default/objects/Booking__c/validationRules/check_in_out_not_fill_room_not_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>check_in_out_not_fill_room_not_selected</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;Not confirmed&apos;) &amp;&amp;
( !ISBLANK( Check_In_Time__c ) || !ISBLANK( Check_Out_time__c )||!ISBLANK( Room__c ))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Check in and Check out time should not  be selected and room no is not filled when status is not-confirmed</errorMessage>
</ValidationRule>