force-app/main/default/objects/Booking__c/validationRules/check_in_out_time_must_be_empty_confirm.validationRule-meta.xml
<ValidationRule>
    <fullName>check_in_out_time_must_be_empty_confirm</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;Confirmed&apos;) &amp;&amp; ( 
!ISBLANK( Check_In_Time__c ) ||!ISBLANK( Check_Out_time__c )||ISBLANK( Room__c ))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Check in and Check out time should not  be filled and room name should be filled when room is Confirmed</errorMessage>
</ValidationRule>