force-app/main/default/objects/Booking__c/validationRules/Check_out_in_time_and_R_should_be_fill.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_out_in_time_and_R_should_be_fill</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;Check Out&apos;) &amp;&amp; ( 
ISBLANK( Check_In_Time__c ) ||ISBLANK( Check_Out_time__c )||ISBLANK( Room__c ))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>room name and check in time should be filled and check out  time should be filled when the status is Check out</errorMessage>
</ValidationRule>