force-app/main/default/objects/Booking__c/validationRules/Check_out_must_be_greater_then_check_in.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_out_must_be_greater_then_check_in</fullName>
    <active>true</active>
    <errorConditionFormula>Check_Out_time__c  &lt;  Check_In_Time__c ||
  Check_In_Time__c   &lt;   NOW()</errorConditionFormula>
    <errorDisplayField>Check_In_Time__c</errorDisplayField>
    <errorMessage>Check out time must be greater then check in time and check in time should be greater then current date</errorMessage>
</ValidationRule>