force-app/main/default/objects/Booking__c/validationRules/Check_out_time_should_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_out_time_should_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;Check In&apos;) &amp;&amp; ( 
ISBLANK( Check_In_Time__c ) ||!ISBLANK( Check_Out_time__c )||ISBLANK( Room__c ))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Check out time should not  be filled and room name and check in time should be filled when status is Check in</errorMessage>
</ValidationRule>